--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">CoronaNews</string>
-    <string name="news">新闻</string>
+    <string name="news">首页</string>
     <string name="statistic">数据</string>
     <string name="entry">图谱</string>
     <string name="scholar">学者</string>
     <string name="user">我的</string>
     <string name="msg_search">搜索</string>
+    <string name="edit">编辑</string>
 
 </resources>
