--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="entry">图谱</string>
     <string name="scholar">学者</string>
     <string name="user">我的</string>
-    <string name="msg_search">搜索</string>
+    <string name="search">搜索</string>
     <string name="edit">编辑</string>
+    <string name="loading">正在加载…</string>
+    <string name="baseline">我是有底线的</string>
+    <string name="toolbar">工具栏</string>
+    <string name="contentTest">内容测试</string>
 
 </resources>
