--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="share">分享</string>
     <string name="news_page_title">新闻详情</string>
     <string name="preference_file_key">com.example.coronanews.PREFERENCE_FILE_KEY</string>
+    <string name="browsing_history">历史记录</string>
 
 </resources>
